--- a/tof.ipynb
+++ b/tof.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,9 +32,256 @@
     "import httpx\n",
     "import config\n",
     "import utils\n",
+    "import io\n",
     "\n",
     "\n",
-    "client = httpx.Client()\n"
+    "client = httpx.Client(timeout=300, headers=utils.headers)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model training\n",
+    "\n",
+    "This step will produce the `.h5` model artifact."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating training job\n",
+      "Created training job: {'id': 'wf-instance-01hc837nz4j41yv9c01n2ya82b', 'owner': 'b5feedda-585f-476d-9e40-52acec908605', 'status': 'Pending', 'outputs': {'artifacts': [], 'parameters': {}}}\n",
+      "Blocking until job is done\n",
+      "Training job is done. Downloading artifacts\n",
+      "Writing best_model\n",
+      "Writing best_augmented_model\n",
+      "Writing training_curves\n",
+      "Writing float_model_confusion_matrix\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Response [204 No Content]>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(\"dataset\", \"rb\") as dataset_file:\n",
+    "    print(\"Creating training job\")\n",
+    "    job = client.post(\n",
+    "        config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
+    "        files={\n",
+    "            \"uploadedFile\": dataset_file\n",
+    "        },\n",
+    "        data={\n",
+    "            \"templateId\": config.TRAINING_JOB_TEMPLATE_ID,\n",
+    "            \"runtimeInput\": json.dumps(\n",
+    "                {\n",
+    "                    \"config\": {},\n",
+    "                }\n",
+    "            )\n",
+    "        }\n",
+    "    ).raise_for_status().json()\n",
+    "\n",
+    "\n",
+    "print(f\"Created training job: {job!r}\")\n",
+    "\n",
+    "job_id = job[\"id\"]\n",
+    "\n",
+    "print(\"Blocking until job is done\")\n",
+    "job = utils.block_until_done(job_id)\n",
+    "\n",
+    "print(\"Training job is done. Downloading artifacts\")\n",
+    "artifacts = utils.download_artifacts(job)\n",
+    "\n",
+    "for key in artifacts:\n",
+    "    print(f\"Writing {key}\")\n",
+    "    with open(key, \"wb\") as file:\n",
+    "        file.write(artifacts[key])\n",
+    "\n",
+    "# Ok for GC\n",
+    "del artifacts\n",
+    "client.delete(f\"{config.JOBCONTROL_API_JOBS_ENDPOINT}/{job_id}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CubeAI\n",
+    "\n",
+    "This step will generate `.c`/`.h` NN sources by invoking the STM32 Developer cloud APIs.\n",
+    "\n",
+    "We'll download a zip containing said sources as well as the CubeAI runtime that will eventually be linked into the application firmware. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating CubeAI job\n",
+      "Created CubeAI job: {'id': 'wf-instance-01hc83a7yyk3mpe87cdswr705k', 'owner': 'b5feedda-585f-476d-9e40-52acec908605', 'status': 'Pending', 'outputs': {'artifacts': [], 'parameters': {}}}\n",
+      "Blocking until job is done\n",
+      "CubeAI job is done. Downloading artifacts\n",
+      "Writing output\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Response [204 No Content]>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "with open(\"best_model\", \"rb\") as model_file:\n",
+    "    model = utils.NamedBuffer(\"model\", model_file.read())\n",
+    "\n",
+    "with open(\"prod_token.txt\", \"rb\") as token_file:\n",
+    "    token = utils.NamedBuffer(\"token\", token_file.read())\n",
+    "\n",
+    "# devcloud API command\n",
+    "command = {\n",
+    "    \"command\": \"generate\",\n",
+    "    \"parameters\": {\n",
+    "        \"includeLibraryForSerie\": \"M4\",\n",
+    "        \"allocateInputs\": True,\n",
+    "        \"allocateOutputs\": True,\n",
+    "        \"compression\": \"none\",\n",
+    "        \"optimization\": \"balanced\"\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "print(\"Creating CubeAI job\")\n",
+    "job = client.post(\n",
+    "    config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
+    "    files={\n",
+    "        \"model\": model,\n",
+    "        \"token\": token,\n",
+    "    },\n",
+    "    data={\n",
+    "        \"templateId\": config.CUBEAI_JOB_TEMPLATE_ID,\n",
+    "        \"runtimeInput\": json.dumps({\n",
+    "            \"command\": command\n",
+    "        })\n",
+    "    }\n",
+    ").raise_for_status().json()\n",
+    "\n",
+    "print(f\"Created CubeAI job: {job!r}\")\n",
+    "\n",
+    "job_id = job[\"id\"]\n",
+    "\n",
+    "print(\"Blocking until job is done\")\n",
+    "job = utils.block_until_done(job_id)\n",
+    "\n",
+    "print(\"CubeAI job is done. Downloading artifacts\")\n",
+    "artifacts = utils.download_artifacts(job)\n",
+    "\n",
+    "for key in artifacts:\n",
+    "    print(f\"Writing {key}\")\n",
+    "    with open(key, \"wb\") as file:\n",
+    "        file.write(artifacts[key])\n",
+    "\n",
+    "# Ok for GC\n",
+    "del artifacts\n",
+    "client.delete(f\"{config.JOBCONTROL_API_JOBS_ENDPOINT}/{job_id}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building\n",
+    "\n",
+    "In this step we build the output NN sources into a deployment-ready application firmware."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating builder job\n",
+      "Created builder job: {'id': 'wf-instance-01hc83fhm7gzsgj5qhft2d1gcy', 'owner': 'b5feedda-585f-476d-9e40-52acec908605', 'status': 'Pending', 'outputs': {'artifacts': [], 'parameters': {}}}\n",
+      "Blocking until job is done\n",
+      "Builder job is done. Downloading artifacts\n",
+      "Writing artifact\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Response [204 No Content]>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(\"output\", \"rb\") as cubeai_output_file:\n",
+    "    cubeai_output = utils.NamedBuffer(\"network\", cubeai_output_file.read())\n",
+    "\n",
+    "print(\"Creating builder job\")\n",
+    "job = client.post(\n",
+    "    config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
+    "    files={\n",
+    "        \"network\": cubeai_output\n",
+    "\n",
+    "    },\n",
+    "    data={\n",
+    "        \"templateId\": config.COMPILATION_JOB_TEMPLATE_ID,\n",
+    "        \"runtimeInput\": json.dumps({\n",
+    "        })\n",
+    "    }\n",
+    ").raise_for_status().json()\n",
+    "\n",
+    "print(f\"Created builder job: {job!r}\")\n",
+    "\n",
+    "job_id = job[\"id\"]\n",
+    "\n",
+    "print(\"Blocking until job is done\")\n",
+    "job = utils.block_until_done(job_id)\n",
+    "\n",
+    "print(\"Builder job is done. Downloading artifacts\")\n",
+    "artifacts = utils.download_artifacts(job)\n",
+    "\n",
+    "for key in artifacts:\n",
+    "    print(f\"Writing {key}\")\n",
+    "    with open(key, \"wb\") as file:\n",
+    "        file.write(artifacts[key])\n",
+    "\n",
+    "# Ok for GC\n",
+    "del artifacts\n",
+    "client.delete(f\"{config.JOBCONTROL_API_JOBS_ENDPOINT}/{job_id}\")"
    ]
   },
   {
@@ -43,31 +290,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Cleanup\n",
     "\n",
-    "dataset_file = open(\"dataset\", \"rb\")\n",
-    "\n",
-    "job = client.post(\n",
-    "    config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
-    "    files={\n",
-    "        \"uploadedFile\": dataset_file\n",
-    "    },\n",
-    "    data={\n",
-    "        \"templateId\": config.TRAINING_JOB_TEMPLATE_ID,\n",
-    "        \"runtimeInput\": json.dumps(\n",
-    "            {\n",
-    "                \"config\": {},\n",
-    "            }\n",
-    "        )\n",
-    "    },\n",
-    "    # Authorization header\n",
-    "    headers=utils.headers\n",
-    ").raise_for_status().json()\n",
-    "\n",
-    "job_id = job[\"id\"]\n",
-    "\n",
-    "job = utils.block_until_done(job_id)\n",
-    "\n",
-    "artifacts = utils.download_artifacts(job)"
+    "client.close()"
    ]
   }
  ],
