add training log to gitignore

--- a/tof.ipynb
+++ b/tof.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,6 @@
     "import httpx\n",
     "import config\n",
     "import utils\n",
-    "import io\n",
-    "\n",
     "\n",
     "client = httpx.Client(timeout=300, headers=utils.headers)\n"
    ]
@@ -49,34 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating training job\n",
-      "Created training job: {'id': 'wf-instance-01hc837nz4j41yv9c01n2ya82b', 'owner': 'b5feedda-585f-476d-9e40-52acec908605', 'status': 'Pending', 'outputs': {'artifacts': [], 'parameters': {}}}\n",
-      "Blocking until job is done\n",
-      "Training job is done. Downloading artifacts\n",
-      "Writing best_model\n",
-      "Writing best_augmented_model\n",
-      "Writing training_curves\n",
-      "Writing float_model_confusion_matrix\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Response [204 No Content]>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(\"dataset\", \"rb\") as dataset_file:\n",
     "    print(\"Creating training job\")\n",
@@ -100,7 +73,7 @@
     "\n",
     "job_id = job[\"id\"]\n",
     "\n",
-    "print(\"Blocking until job is done\")\n",
+    "print(\"Blocking until job is done...\")\n",
     "job = utils.block_until_done(job_id)\n",
     "\n",
     "print(\"Training job is done. Downloading artifacts\")\n",
@@ -130,31 +103,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating CubeAI job\n",
-      "Created CubeAI job: {'id': 'wf-instance-01hc83a7yyk3mpe87cdswr705k', 'owner': 'b5feedda-585f-476d-9e40-52acec908605', 'status': 'Pending', 'outputs': {'artifacts': [], 'parameters': {}}}\n",
-      "Blocking until job is done\n",
-      "CubeAI job is done. Downloading artifacts\n",
-      "Writing output\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Response [204 No Content]>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "with open(\"best_model\", \"rb\") as model_file:\n",
@@ -194,7 +145,7 @@
     "\n",
     "job_id = job[\"id\"]\n",
     "\n",
-    "print(\"Blocking until job is done\")\n",
+    "print(\"Blocking until job is done...\")\n",
     "job = utils.block_until_done(job_id)\n",
     "\n",
     "print(\"CubeAI job is done. Downloading artifacts\")\n",
@@ -221,31 +172,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating builder job\n",
-      "Created builder job: {'id': 'wf-instance-01hc83fhm7gzsgj5qhft2d1gcy', 'owner': 'b5feedda-585f-476d-9e40-52acec908605', 'status': 'Pending', 'outputs': {'artifacts': [], 'parameters': {}}}\n",
-      "Blocking until job is done\n",
-      "Builder job is done. Downloading artifacts\n",
-      "Writing artifact\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Response [204 No Content]>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(\"output\", \"rb\") as cubeai_output_file:\n",
     "    cubeai_output = utils.NamedBuffer(\"network\", cubeai_output_file.read())\n",
@@ -268,7 +197,7 @@
     "\n",
     "job_id = job[\"id\"]\n",
     "\n",
-    "print(\"Blocking until job is done\")\n",
+    "print(\"Blocking until job is done...\")\n",
     "job = utils.block_until_done(job_id)\n",
     "\n",
     "print(\"Builder job is done. Downloading artifacts\")\n",
