add api version; token explanation

--- a/tof.ipynb
+++ b/tof.ipynb
@@ -18,7 +18,11 @@
     "\n",
     "Then, install all dependencies simply by invoking `poetry install` in this directory. This will create a virtualenvironment and place it in this folder as `.venv`.\n",
     "\n",
-    "Start a jupyter kernel in that environment and you're ready to run the notebook"
+    "Start a jupyter kernel in that environment and you're ready to run the notebook.\n",
+    "\n",
+    "You will also need API credentials for both Vespucci and the stm32ai developer cloud. Eventually these will be the same token, however for now the devcloud accepts only vespucci prod credentials. This examples runs on vespucci-dev.\n",
+    "\n",
+    "You'll need both tokens respectively at `./prod-token.txt` and `token.txt`."
    ]
   },
   {
@@ -123,7 +127,8 @@
     "        \"allocateOutputs\": True,\n",
     "        \"compression\": \"none\",\n",
     "        \"optimization\": \"balanced\"\n",
-    "    }\n",
+    "    },\n",
+    "    \"version\": \"7.3.0\"\n",
     "}\n",
     "\n",
     "print(\"Creating CubeAI job\")\n",
