working with custom dataset

--- a/tof.ipynb
+++ b/tof.ipynb
@@ -66,7 +66,16 @@
     "            \"templateId\": config.TRAINING_JOB_TEMPLATE_ID,\n",
     "            \"runtimeInput\": json.dumps(\n",
     "                {\n",
-    "                    \"config\": {},\n",
+    "                    \"config\": {\n",
+    "                        \"dataset\": {\n",
+    "                            \"class_names\": [\n",
+    "                                \"One\",\n",
+    "                                \"Two\",\n",
+    "                                \"Three\",\n",
+    "                                \"Four\"\n",
+    "                            ]\n",
+    "                        }\n",
+    "                    },\n",
     "                }\n",
     "            )\n",
     "        }\n",
@@ -121,12 +130,15 @@
     "# devcloud API command\n",
     "command = {\n",
     "    \"command\": \"generate\",\n",
-    "    \"parameters\": {\n",
-    "        \"includeLibraryForSerie\": \"M4\",\n",
-    "        \"allocateInputs\": True,\n",
-    "        \"allocateOutputs\": True,\n",
-    "        \"compression\": \"none\",\n",
-    "        \"optimization\": \"balanced\"\n",
+    "    \"arguments\":{\n",
+    "        \"options\": {\n",
+    "            \"includeLibraryForSerie\": \"M4\",\n",
+    "            \"includeLibraryForIde\": \"gcc\",\n",
+    "            \"allocateInputs\": True,\n",
+    "            \"allocateOutputs\": True,\n",
+    "            \"compression\": \"none\",\n",
+    "            \"optimization\": \"balanced\"\n",
+    "        },\n",
     "    },\n",
     "    \"version\": \"7.3.0\"\n",
     "}\n",
@@ -189,11 +201,20 @@
     "    config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
     "    files={\n",
     "        \"network\": cubeai_output\n",
-    "\n",
     "    },\n",
     "    data={\n",
     "        \"templateId\": config.COMPILATION_JOB_TEMPLATE_ID,\n",
     "        \"runtimeInput\": json.dumps({\n",
+    "            \"config\": {\n",
+    "                \"dataset\": {\n",
+    "                    \"class_names\": [\n",
+    "                        \"One\",\n",
+    "                        \"Two\",\n",
+    "                        \"Three\",\n",
+    "                        \"Four\"\n",
+    "                    ]\n",
+    "                }\n",
+    "            },\n",
     "        })\n",
     "    }\n",
     ").raise_for_status().json()\n",
