use single token now that devcloud accepts all vespucci environments

--- a/tof.ipynb
+++ b/tof.ipynb
@@ -20,9 +20,7 @@
     "\n",
     "Start a jupyter kernel in that environment and you're ready to run the notebook.\n",
     "\n",
-    "You will also need API credentials for both Vespucci and the stm32ai developer cloud. Eventually these will be the same token, however for now the devcloud accepts only vespucci prod credentials. This examples runs on vespucci-dev.\n",
-    "\n",
-    "You'll need both tokens respectively at `./prod-token.txt` and `token.txt`."
+    "You will also need API credentials for both Vespucci and the stm32ai developer cloud. Devcloud accepts vespucci tokens from all environments; his examples runs on vespucci-dev, so you should use a token generated for that environment.\n"
    ]
   },
   {
@@ -124,8 +122,7 @@
     "with open(\"best_model\", \"rb\") as model_file:\n",
     "    model = utils.NamedBuffer(\"model\", model_file.read())\n",
     "\n",
-    "with open(\"prod_token.txt\", \"rb\") as token_file:\n",
-    "    token = utils.NamedBuffer(\"token\", token_file.read())\n",
+    "token = utils.NamedBuffer(\"token\", utils.token().encode(\"utf-8\"))\n",
     "\n",
     "# devcloud API command\n",
     "command = {\n",
