replace polling with watch event stream

--- a/tof.ipynb
+++ b/tof.ipynb
@@ -85,7 +85,7 @@
     "job_id = job[\"id\"]\n",
     "\n",
     "print(\"Blocking until job is done...\")\n",
-    "job = utils.block_until_done(job_id)\n",
+    "job = await utils.block_until_done(job_id)\n",
     "\n",
     "print(\"Training job is done. Downloading artifacts\")\n",
     "artifacts = utils.download_artifacts(job)\n",
@@ -160,7 +160,7 @@
     "job_id = job[\"id\"]\n",
     "\n",
     "print(\"Blocking until job is done...\")\n",
-    "job = utils.block_until_done(job_id)\n",
+    "job = await utils.block_until_done(job_id)\n",
     "\n",
     "print(\"CubeAI job is done. Downloading artifacts\")\n",
     "artifacts = utils.download_artifacts(job)\n",
@@ -221,7 +221,7 @@
     "job_id = job[\"id\"]\n",
     "\n",
     "print(\"Blocking until job is done...\")\n",
-    "job = utils.block_until_done(job_id)\n",
+    "job = await utils.block_until_done(job_id)\n",
     "\n",
     "print(\"Builder job is done. Downloading artifacts\")\n",
     "artifacts = utils.download_artifacts(job)\n",
