use InjectIdentity runtimewiring for stm32ai-dc token

--- a/tof.ipynb
+++ b/tof.ipynb
@@ -72,7 +72,10 @@
     "                                \"Three\",\n",
     "                                \"Four\"\n",
     "                            ]\n",
-    "                        }\n",
+    "                        },\n",
+    "                        # \"stm32ai\": {\n",
+    "                        #     \"version\": \"8.1.0\"\n",
+    "                        # }\n",
     "                    },\n",
     "                }\n",
     "            )\n",
@@ -122,8 +125,6 @@
     "with open(\"best_model\", \"rb\") as model_file:\n",
     "    model = utils.NamedBuffer(\"model\", model_file.read())\n",
     "\n",
-    "token = utils.NamedBuffer(\"token\", utils.token().encode(\"utf-8\"))\n",
-    "\n",
     "# devcloud API command\n",
     "command = {\n",
     "    \"command\": \"generate\",\n",
@@ -145,7 +146,6 @@
     "    config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
     "    files={\n",
     "        \"model\": model,\n",
-    "        \"token\": token,\n",
     "    },\n",
     "    data={\n",
     "        \"templateId\": config.CUBEAI_JOB_TEMPLATE_ID,\n",
@@ -210,7 +210,10 @@
     "                        \"Three\",\n",
     "                        \"Four\"\n",
     "                    ]\n",
-    "                }\n",
+    "                },\n",
+    "                # \"stm32ai\": {\n",
+    "                #     \"version\": \"8.1.0\"\n",
+    "                # }\n",
     "            },\n",
     "        })\n",
     "    }\n",
