--- a/tof.ipynb
+++ b/tof.ipynb
@@ -9,18 +9,18 @@
     "This Jupyter notebook invokes the Vespucci jobcontrol-api to\n",
     "\n",
     "- Train the model for ToF\n",
-    "- Generate the network `.c`/`.h` sources\n",
+    "- Benchmark the model and generate the network `.c`/`.h` sources\n",
     "- Build the application firmware\n",
     "\n",
     "### Initial setup\n",
     "\n",
-    "Dependencies are managed via `poetry`. You may install it with `pip install poetry`\n",
+    "Dependencies are managed via the `poetry` command. You may install it with `pip install poetry`\n",
     "\n",
-    "Then, install all dependencies simply by invoking `poetry install` in this directory. This will create a virtualenvironment and place it in this folder as `.venv`.\n",
+    "Then, install all dependencies simply by invoking `poetry install` in this directory. This will create a virtual environment and place it in this folder as `.venv`.\n",
     "\n",
     "Start a jupyter kernel in that environment and you're ready to run the notebook.\n",
     "\n",
-    "You will also need API credentials for both Vespucci and the stm32ai developer cloud. Devcloud accepts vespucci tokens from all environments; his examples runs on vespucci-dev, so you should use a token generated for that environment.\n"
+    "You will need API credentials for Vespucci. This example runs on vespucci-dev by default, so you should use a token generated for that environment.\n"
    ]
   },
   {
@@ -34,6 +34,9 @@
     "import httpx\n",
     "import config\n",
     "import utils\n",
+    "import asyncio\n",
+    "\n",
+    "from collections.abc import Awaitable\n",
     "\n",
     "client = httpx.Client(timeout=300, headers=utils.headers)\n"
    ]
@@ -108,11 +111,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CubeAI\n",
+    "## Benchmarking + Cube.AI\n",
     "\n",
     "This step will generate `.c`/`.h` NN sources by invoking the STM32 Developer cloud APIs.\n",
     "\n",
-    "We'll download a zip containing said sources as well as the CubeAI runtime that will eventually be linked into the application firmware. "
+    "We'll download a zip containing said sources as well as the CubeAI runtime that will eventually be linked into the application firmware.\n",
+    "\n",
+    "Simultaneously, we'll dispatch the benchmarkinging job and display the inference time once it's been measured."
    ]
   },
   {
@@ -121,12 +126,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "with open(\"best_model\", \"rb\") as model_file:\n",
     "    model = utils.NamedBuffer(\"model\", model_file.read())\n",
     "\n",
     "# devcloud API command\n",
-    "command = {\n",
+    "generate_command = {\n",
     "    \"command\": \"generate\",\n",
     "    \"arguments\":{\n",
     "        \"options\": {\n",
@@ -141,8 +145,8 @@
     "    \"version\": \"7.3.0\"\n",
     "}\n",
     "\n",
-    "print(\"Creating CubeAI job\")\n",
-    "job = client.post(\n",
+    "print(\"Creating Cube.AI job\")\n",
+    "generate_job = client.post(\n",
     "    config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
     "    files={\n",
     "        \"model\": model,\n",
@@ -150,29 +154,78 @@
     "    data={\n",
     "        \"templateId\": config.CUBEAI_JOB_TEMPLATE_ID,\n",
     "        \"runtimeInput\": json.dumps({\n",
-    "            \"command\": command\n",
+    "            \"command\": generate_command\n",
     "        })\n",
     "    }\n",
     ").raise_for_status().json()\n",
+    "print(f\"Created CubeAI job: {generate_job!r}\")\n",
     "\n",
-    "print(f\"Created CubeAI job: {job!r}\")\n",
+    "# devcloud API command\n",
+    "benchmarking_command = {\n",
+    "    \"command\": \"benchmark\",\n",
+    "    \"arguments\":{\n",
+    "        \"options\": {},\n",
+    "        \"parameters\": {\n",
+    "            \"board_name\": \"NUCLEO-F401RE\"\n",
+    "        }\n",
+    "    },\n",
+    "    \"version\": \"7.3.0\"\n",
+    "}\n",
     "\n",
-    "job_id = job[\"id\"]\n",
+    "print(\"Creating benchmarking job\")\n",
+    "benchmarking_job = client.post(\n",
+    "    config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
+    "    files={\n",
+    "        \"model\": model,\n",
+    "    },\n",
+    "    data={\n",
+    "        \"templateId\": config.BENCHMARKING_JOB_TEMPLATE_ID,\n",
+    "        \"runtimeInput\": json.dumps({\n",
+    "            \"command\": benchmarking_command\n",
+    "        })\n",
+    "    }\n",
+    ").raise_for_status().json()\n",
+    "print(f\"Created benchmarking job: {benchmarking_job!r}\")\n",
     "\n",
-    "print(\"Blocking until job is done...\")\n",
-    "job = await utils.block_until_done(job_id)\n",
     "\n",
-    "print(\"CubeAI job is done. Downloading artifacts\")\n",
-    "artifacts = utils.download_artifacts(job)\n",
+    "async def _generate_coro() -> Awaitable[None]:\n",
     "\n",
-    "for key in artifacts:\n",
-    "    print(f\"Writing {key}\")\n",
-    "    with open(key, \"wb\") as file:\n",
-    "        file.write(artifacts[key])\n",
+    "    global generate_job\n",
     "\n",
-    "# Ok for GC\n",
-    "del artifacts\n",
-    "client.delete(f\"{config.JOBCONTROL_API_JOBS_ENDPOINT}/{job_id}\")"
+    "    job_id = generate_job[\"id\"]\n",
+    "\n",
+    "    generate_job = await utils.block_until_done(job_id)\n",
+    "\n",
+    "    print(\"CubeAI job is done. Downloading artifacts\")\n",
+    "    artifacts = utils.download_artifacts(generate_job)\n",
+    "\n",
+    "    for key in artifacts:\n",
+    "        print(f\"Writing {key}\")\n",
+    "        with open(key, \"wb\") as file:\n",
+    "            file.write(artifacts[key])\n",
+    "\n",
+    "    # Ok for GC\n",
+    "    del artifacts\n",
+    "    client.delete(f\"{config.JOBCONTROL_API_JOBS_ENDPOINT}/{job_id}\")\n",
+    "\n",
+    "\n",
+    "async def _benchmarking_coro() -> Awaitable[None]:\n",
+    "\n",
+    "    global benchmarking_job\n",
+    "\n",
+    "    job_id = benchmarking_job[\"id\"]\n",
+    "\n",
+    "    benchmarking_job = await utils.block_until_done(job_id)\n",
+    "\n",
+    "    report = json.loads(benchmarking_job[\"outputs\"][\"parameters\"][\"benchmark_report\"])\n",
+    "    print(f\"Benchmarking job is done. Inference time: {report['duration_ms']}ms\")\n",
+    "\n",
+    "\n",
+    "    client.delete(f\"{config.JOBCONTROL_API_JOBS_ENDPOINT}/{job_id}\")\n",
+    "\n",
+    "await asyncio.wait((asyncio.create_task(_generate_coro()), asyncio.create_task(_benchmarking_coro())))\n",
+    "\n",
+    "print(\"Cube.AI and benchmarking done.\")\n"
    ]
   },
   {
@@ -267,7 +320,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
