--- a/tof.ipynb
+++ b/tof.ipynb
@@ -72,13 +72,11 @@
     "                            \"class_names\": [\n",
     "                                \"One\",\n",
     "                                \"Two\",\n",
-    "                                \"Three\",\n",
-    "                                \"Four\"\n",
     "                            ]\n",
     "                        },\n",
-    "                        # \"stm32ai\": {\n",
-    "                        #     \"version\": \"8.1.0\"\n",
-    "                        # }\n",
+    "                        \"stm32ai\": {\n",
+    "                            \"version\": \"8.1.0\"\n",
+    "                        }\n",
     "                    },\n",
     "                }\n",
     "            )\n",
@@ -142,7 +140,7 @@
     "            \"optimization\": \"balanced\"\n",
     "        },\n",
     "    },\n",
-    "    \"version\": \"7.3.0\"\n",
+    "    \"version\": \"8.1.0\"\n",
     "}\n",
     "\n",
     "print(\"Creating Cube.AI job\")\n",
@@ -169,7 +167,7 @@
     "            \"board_name\": \"NUCLEO-F401RE\"\n",
     "        }\n",
     "    },\n",
-    "    \"version\": \"7.3.0\"\n",
+    "    \"version\": \"8.1.0\"\n",
     "}\n",
     "\n",
     "print(\"Creating benchmarking job\")\n",
@@ -260,8 +258,6 @@
     "                    \"class_names\": [\n",
     "                        \"One\",\n",
     "                        \"Two\",\n",
-    "                        \"Three\",\n",
-    "                        \"Four\"\n",
     "                    ]\n",
     "                },\n",
     "                # \"stm32ai\": {\n",
