feat(modelzoo): generic notebook works for object detection

--- a/generic.ipynb
+++ b/generic.ipynb
@@ -81,6 +81,9 @@
     "                    },\n",
     "                    \"stm32ai\": {\n",
     "                        \"version\": \"8.0.1\"\n",
+    "                    },\n",
+    "                    \"dataset\": {\n",
+    "                        \"class_names\": [\"person\"]\n",
     "                    }\n",
     "                }\n",
     "            }\n",
@@ -256,6 +259,9 @@
     "            \"build_config\": {\n",
     "                \"stm32ai\": {\n",
     "                    \"version\": \"8.0.1\"\n",
+    "                },\n",
+    "                \"dataset\": {\n",
+    "                    \"class_names\": [\"person\"]\n",
     "                }\n",
     "            }\n",
     "        })\n",
@@ -280,8 +286,10 @@
     "    binary_file_name = next(name for name in archive.namelist() if name.endswith(\".bin\"))\n",
     "    binary_file = archive.read(binary_file_name)\n",
     "\n",
-    "open(\"./getting_started.zip\", \"wb\").write(getting_started_zip)\n",
-    "open(\"./binary.bin\", \"wb\").write(binary_file)\n"
+    "assert open(\"./getting_started.zip\", \"wb\").write(getting_started_zip) > 0\n",
+    "assert open(\"./binary.bin\", \"wb\").write(binary_file) > 0\n",
+    "\n",
+    "print(\"Succesfully produced final artifacts: `getting_started.zip` and `binary.bin`\")\n"
    ]
   }
  ],
