--- a/generic.ipynb
+++ b/generic.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "from collections.abc import Awaitable\n",
     "\n",
-    "client = httpx.Client(timeout=300, headers=utils.headers())\n"
+    "client = httpx.Client(timeout=300, headers=utils.headers())"
    ]
   },
   {
@@ -60,36 +60,36 @@
    "source": [
     "print(\"Creating training job\")\n",
     "\n",
-    "job = client.post(\n",
-    "    config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
-    "    files={\n",
-    "        \"uploadedFile\": ('train_data', open(\"./sample-inputs/object_detection/train.zip\", \"rb\")),\n",
-    "        \"uploadedFile2\": (\"valid_data\", open(\"./sample-inputs/object_detection/valid.zip\", \"rb\"))\n",
-    "    },\n",
-    "    data={\n",
-    "        \"templateId\": config.TRAINING_JOB_TEMPLATE_ID,\n",
-    "        \"runtimeInput\": json.dumps(\n",
-    "            {\n",
-    "                \"job_config\": {\n",
-    "                    \"root\": \"object_detection/scripts/training\"\n",
-    "                },\n",
-    "                \"training_config\": {\n",
-    "                    \"hydra\": {\n",
-    "                        \"run\": {\n",
-    "                            \"dir\": \"outputs\"\n",
-    "                        }\n",
+    "job = (\n",
+    "    client.post(\n",
+    "        config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
+    "        files={\n",
+    "            \"uploadedFile\": (\n",
+    "                \"train_data\",\n",
+    "                open(\"./sample-inputs/object_detection/train.zip\", \"rb\"),\n",
+    "            ),\n",
+    "            \"uploadedFile2\": (\n",
+    "                \"valid_data\",\n",
+    "                open(\"./sample-inputs/object_detection/valid.zip\", \"rb\"),\n",
+    "            ),\n",
+    "        },\n",
+    "        data={\n",
+    "            \"templateId\": config.TRAINING_JOB_TEMPLATE_ID,\n",
+    "            \"runtimeInput\": json.dumps(\n",
+    "                {\n",
+    "                    \"job_config\": {\"root\": \"object_detection/scripts/training\"},\n",
+    "                    \"training_config\": {\n",
+    "                        \"hydra\": {\"run\": {\"dir\": \"outputs\"}},\n",
+    "                        \"stm32ai\": {\"version\": \"8.0.1\"},\n",
+    "                        \"dataset\": {\"class_names\": [\"person\"]},\n",
     "                    },\n",
-    "                    \"stm32ai\": {\n",
-    "                        \"version\": \"8.0.1\"\n",
-    "                    },\n",
-    "                    \"dataset\": {\n",
-    "                        \"class_names\": [\"person\"]\n",
-    "                    }\n",
     "                }\n",
-    "            }\n",
-    "        )\n",
-    "    }\n",
-    ").raise_for_status().json()\n",
+    "            ),\n",
+    "        },\n",
+    "    )\n",
+    "    .raise_for_status()\n",
+    "    .json()\n",
+    ")\n",
     "\n",
     "\n",
     "print(f\"Created training job: {job!r}\")\n",
@@ -106,7 +106,7 @@
     "\n",
     "outputs_zip = zf.ZipFile(io.BytesIO(artifacts[\"outputs_zip\"]), \"r\")\n",
     "\n",
-    "model = outputs_zip.read(\"quantized_models/quantized_model.tflite\")\n"
+    "model = outputs_zip.read(\"quantized_models/quantized_model.tflite\")"
    ]
   },
   {
@@ -131,7 +131,7 @@
     "# devcloud API command\n",
     "generate_command = {\n",
     "    \"command\": \"generate\",\n",
-    "    \"arguments\":{\n",
+    "    \"arguments\": {\n",
     "        \"options\": {\n",
     "            \"includeLibraryForSerie\": \"H7\",\n",
     "            \"includeLibraryForIde\": \"gcc\",\n",
@@ -139,57 +139,55 @@
     "            \"allocateOutputs\": True,\n",
     "            \"compression\": \"none\",\n",
     "            \"optimization\": \"balanced\",\n",
-    "            \"classifier\": False\n",
+    "            \"classifier\": False,\n",
     "        },\n",
     "    },\n",
-    "    \"version\": \"8.0.1\"\n",
+    "    \"version\": \"8.0.1\",\n",
     "}\n",
     "\n",
     "print(\"Creating Cube.AI job\")\n",
-    "generate_job = client.post(\n",
-    "    config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
-    "    files={\n",
-    "        \"model\": (\"model\", model),\n",
-    "    },\n",
-    "    data={\n",
-    "        \"templateId\": config.CUBEAI_JOB_TEMPLATE_ID,\n",
-    "        \"runtimeInput\": json.dumps({\n",
-    "            \"command\": generate_command\n",
-    "        })\n",
-    "    }\n",
-    ").raise_for_status().json()\n",
+    "generate_job = (\n",
+    "    client.post(\n",
+    "        config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
+    "        files={\n",
+    "            \"model\": (\"model\", model),\n",
+    "        },\n",
+    "        data={\n",
+    "            \"templateId\": config.CUBEAI_JOB_TEMPLATE_ID,\n",
+    "            \"runtimeInput\": json.dumps({\"command\": generate_command}),\n",
+    "        },\n",
+    "    )\n",
+    "    .raise_for_status()\n",
+    "    .json()\n",
+    ")\n",
     "print(f\"Created CubeAI job: {generate_job!r}\")\n",
     "\n",
     "# devcloud API command\n",
     "benchmarking_command = {\n",
     "    \"command\": \"benchmark\",\n",
-    "    \"arguments\":{\n",
-    "        \"options\": {},\n",
-    "        \"parameters\": {\n",
-    "            \"board_name\": \"STM32H747I-DISCO\"\n",
-    "        }\n",
-    "    },\n",
-    "    \"version\": \"8.0.1\"\n",
+    "    \"arguments\": {\"options\": {}, \"parameters\": {\"board_name\": \"STM32H747I-DISCO\"}},\n",
+    "    \"version\": \"8.0.1\",\n",
     "}\n",
     "\n",
     "print(\"Creating benchmarking job\")\n",
-    "benchmarking_job = client.post(\n",
-    "    config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
-    "    files={\n",
-    "        \"model\": (\"model\", model),\n",
-    "    },\n",
-    "    data={\n",
-    "        \"templateId\": config.BENCHMARKING_JOB_TEMPLATE_ID,\n",
-    "        \"runtimeInput\": json.dumps({\n",
-    "            \"command\": benchmarking_command\n",
-    "        })\n",
-    "    }\n",
-    ").raise_for_status().json()\n",
+    "benchmarking_job = (\n",
+    "    client.post(\n",
+    "        config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
+    "        files={\n",
+    "            \"model\": (\"model\", model),\n",
+    "        },\n",
+    "        data={\n",
+    "            \"templateId\": config.BENCHMARKING_JOB_TEMPLATE_ID,\n",
+    "            \"runtimeInput\": json.dumps({\"command\": benchmarking_command}),\n",
+    "        },\n",
+    "    )\n",
+    "    .raise_for_status()\n",
+    "    .json()\n",
+    ")\n",
     "print(f\"Created benchmarking job: {benchmarking_job!r}\")\n",
     "\n",
     "\n",
     "async def _generate_coro() -> Awaitable[None]:\n",
-    "\n",
     "    global generate_job\n",
     "    global cubeai_output\n",
     "\n",
@@ -205,7 +203,6 @@
     "\n",
     "\n",
     "async def _benchmarking_coro() -> Awaitable[None]:\n",
-    "\n",
     "    global benchmarking_job\n",
     "    global benchmarking_output\n",
     "\n",
@@ -222,9 +219,12 @@
     "    with zf.ZipFile(io.BytesIO(benchmarking_output), \"r\") as archive:\n",
     "        report = json.loads(archive.read(\"benchmark_report.json\").decode(\"utf-8\"))\n",
     "\n",
-    "await asyncio.wait((asyncio.create_task(_generate_coro()), asyncio.create_task(_benchmarking_coro())))\n",
     "\n",
-    "print(\"Cube.AI and benchmarking done.\")\n"
+    "await asyncio.wait(\n",
+    "    (asyncio.create_task(_generate_coro()), asyncio.create_task(_benchmarking_coro()))\n",
+    ")\n",
+    "\n",
+    "print(\"Cube.AI and benchmarking done.\")"
    ]
   },
   {
@@ -242,31 +242,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "print(\"Creating builder job\")\n",
-    "job = client.post(\n",
-    "    config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
-    "    files={\n",
-    "        \"file1\": (\"cubeai_output\", cubeai_output),\n",
-    "        \"file2\": (\"model\", model)\n",
-    "    },\n",
-    "    data={\n",
-    "        \"templateId\": config.COMPILATION_JOB_TEMPLATE_ID,\n",
-    "        \"runtimeInput\": json.dumps({\n",
-    "            \"job_config\": {\n",
-    "                \"root\": \"object_detection/scripts/deployment\"\n",
-    "            },\n",
-    "            \"build_config\": {\n",
-    "                \"stm32ai\": {\n",
-    "                    \"version\": \"8.0.1\"\n",
-    "                },\n",
-    "                \"dataset\": {\n",
-    "                    \"class_names\": [\"person\"]\n",
+    "job = (\n",
+    "    client.post(\n",
+    "        config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
+    "        files={\"file1\": (\"cubeai_output\", cubeai_output), \"file2\": (\"model\", model)},\n",
+    "        data={\n",
+    "            \"templateId\": config.COMPILATION_JOB_TEMPLATE_ID,\n",
+    "            \"runtimeInput\": json.dumps(\n",
+    "                {\n",
+    "                    \"job_config\": {\"root\": \"object_detection/scripts/deployment\"},\n",
+    "                    \"build_config\": {\n",
+    "                        \"stm32ai\": {\"version\": \"8.0.1\"},\n",
+    "                        \"dataset\": {\"class_names\": [\"person\"]},\n",
+    "                    },\n",
     "                }\n",
-    "            }\n",
-    "        })\n",
-    "    }\n",
-    ").raise_for_status().json()\n",
+    "            ),\n",
+    "        },\n",
+    "    )\n",
+    "    .raise_for_status()\n",
+    "    .json()\n",
+    ")\n",
     "\n",
     "print(f\"Created builder job: {job!r}\")\n",
     "\n",
@@ -283,13 +279,15 @@
     "getting_started_zip = artifacts[\"getting_started\"]\n",
     "\n",
     "with zf.ZipFile(io.BytesIO(getting_started_zip), \"r\") as archive:\n",
-    "    binary_file_name = next(name for name in archive.namelist() if name.endswith(\".bin\"))\n",
+    "    binary_file_name = next(\n",
+    "        name for name in archive.namelist() if name.endswith(\".bin\")\n",
+    "    )\n",
     "    binary_file = archive.read(binary_file_name)\n",
     "\n",
     "assert open(\"./getting_started.zip\", \"wb\").write(getting_started_zip) > 0\n",
     "assert open(\"./binary.bin\", \"wb\").write(binary_file) > 0\n",
     "\n",
-    "print(\"Succesfully produced final artifacts: `getting_started.zip` and `binary.bin`\")\n"
+    "print(\"Succesfully produced final artifacts: `getting_started.zip` and `binary.bin`\")"
    ]
   }
  ],
