docs(modelzoo): small addition about token.txt

--- a/generic.ipynb
+++ b/generic.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "Start a jupyter kernel in that environment and you're ready to run the notebook.\n",
     "\n",
-    "You will need API credentials for Vespucci. This example runs on vespucci-dev by default, so you should use a token generated for that environment.\n"
+    "You will need API credentials for Vespucci. This example runs on vespucci-dev by default, so you should use a token generated for that environment. Retrieve an id token and place it into a `token.txt` file in the working directory.\n"
    ]
   },
   {
@@ -218,7 +218,7 @@
     "\n",
     "    with zf.ZipFile(io.BytesIO(benchmarking_output), \"r\") as archive:\n",
     "        report = json.loads(archive.read(\"benchmark_report.json\").decode(\"utf-8\"))\n",
-    "\n",
+    "        print(f\"Benchmarking job is done. Inference time: {report['duration_ms']}ms\")\n",
     "\n",
     "await asyncio.wait(\n",
     "    (asyncio.create_task(_generate_coro()), asyncio.create_task(_benchmarking_coro()))\n",
