--- a/generic.ipynb
+++ b/generic.ipynb
@@ -38,9 +38,9 @@
     "import zipfile as zf\n",
     "import io\n",
     "\n",
-    "from collections.abc import Awaitable\n",
+    "client = httpx.Client(timeout=300, headers=utils.headers())\n",
     "\n",
-    "client = httpx.Client(timeout=300, headers=utils.headers())"
+    "CUBEAI_VERSION = \"8.1.0\""
    ]
   },
   {
@@ -80,8 +80,9 @@
     "                    \"job_config\": {\"root\": \"object_detection/scripts/training\"},\n",
     "                    \"training_config\": {\n",
     "                        \"hydra\": {\"run\": {\"dir\": \"outputs\"}},\n",
-    "                        \"stm32ai\": {\"version\": \"8.0.1\"},\n",
+    "                        \"stm32ai\": {\"version\": CUBEAI_VERSION},\n",
     "                        \"dataset\": {\"class_names\": [\"person\"]},\n",
+    "                        \"train_parameters\": {\"training_epochs\": 1},\n",
     "                    },\n",
     "                }\n",
     "            ),\n",
@@ -142,7 +143,7 @@
     "            \"classifier\": False,\n",
     "        },\n",
     "    },\n",
-    "    \"version\": \"8.0.1\",\n",
+    "    \"version\": CUBEAI_VERSION,\n",
     "}\n",
     "\n",
     "print(\"Creating Cube.AI job\")\n",
@@ -166,7 +167,7 @@
     "benchmarking_command = {\n",
     "    \"command\": \"benchmark\",\n",
     "    \"arguments\": {\"options\": {}, \"parameters\": {\"board_name\": \"STM32H747I-DISCO\"}},\n",
-    "    \"version\": \"8.0.1\",\n",
+    "    \"version\": CUBEAI_VERSION,\n",
     "}\n",
     "\n",
     "print(\"Creating benchmarking job\")\n",
@@ -187,7 +188,7 @@
     "print(f\"Created benchmarking job: {benchmarking_job!r}\")\n",
     "\n",
     "\n",
-    "async def _generate_coro() -> Awaitable[None]:\n",
+    "async def _generate_coro():\n",
     "    global generate_job\n",
     "    global cubeai_output\n",
     "\n",
@@ -202,7 +203,7 @@
     "    cubeai_output = artifacts[\"output\"]\n",
     "\n",
     "\n",
-    "async def _benchmarking_coro() -> Awaitable[None]:\n",
+    "async def _benchmarking_coro():\n",
     "    global benchmarking_job\n",
     "    global benchmarking_output\n",
     "\n",
@@ -220,9 +221,8 @@
     "        report = json.loads(archive.read(\"benchmark_report.json\").decode(\"utf-8\"))\n",
     "        print(f\"Benchmarking job is done. Inference time: {report['duration_ms']}ms\")\n",
     "\n",
-    "await asyncio.wait(\n",
-    "    (asyncio.create_task(_generate_coro()), asyncio.create_task(_benchmarking_coro()))\n",
-    ")\n",
+    "\n",
+    "await asyncio.wait((asyncio.ensure_future(_generate_coro()),))\n",
     "\n",
     "print(\"Cube.AI and benchmarking done.\")"
    ]
@@ -253,7 +253,7 @@
     "                {\n",
     "                    \"job_config\": {\"root\": \"object_detection/scripts/deployment\"},\n",
     "                    \"build_config\": {\n",
-    "                        \"stm32ai\": {\"version\": \"8.0.1\"},\n",
+    "                        \"stm32ai\": {\"version\": CUBEAI_VERSION},\n",
     "                        \"dataset\": {\"class_names\": [\"person\"]},\n",
     "                    },\n",
     "                }\n",
@@ -307,8 +307,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
-  }
+   "version": "3.8.17"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
