--- a/generic.ipynb
+++ b/generic.ipynb
@@ -14,11 +14,9 @@
     "\n",
     "### Initial setup\n",
     "\n",
-    "Dependencies are managed via the `poetry` command. You may install it with `pip install poetry`\n",
+    "Dependencies are managed via the `poetry` command.\n",
     "\n",
-    "Then, install all dependencies simply by invoking `poetry install` in this directory. This will create a virtual environment and place it in this folder as `.venv`.\n",
-    "\n",
-    "Start a jupyter kernel in that environment and you're ready to run the notebook.\n",
+    "Install it with `python -m pip install --user poetry`, then install the dependencies with `python -m poetry install`. Remember to run the notebook kernel in the same environment where you installed the dependencies.\n",
     "\n",
     "You will need API credentials for Vespucci. This example runs on vespucci-dev by default, so you should use a token generated for that environment. Retrieve an id token and place it into a `token.txt` file in the working directory.\n"
    ]
