feat(generic-notebook): optional benchmarking

--- a/generic.ipynb
+++ b/generic.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "Dependencies are managed via the `poetry` command.\n",
     "\n",
-    "Install it with `python -m pip install --user poetry`, then install the dependencies with `python -m poetry install`. Remember to run the notebook kernel in the same environment where you installed the dependencies.\n",
+    "Install it with `python -m pip install --user poetry`, then install the dependencies with `python -m poetry install --no-root`. Remember to run the notebook kernel in the same environment where you installed the dependencies.\n",
     "\n",
     "You will need API credentials for Vespucci. This example runs on vespucci-dev by default, so you should use a token generated for that environment. Retrieve an id token and place it into a `token.txt` file in the working directory.\n"
    ]
@@ -118,7 +118,7 @@
     "\n",
     "We'll download a zip containing said sources as well as the CubeAI runtime that will eventually be linked into the application firmware.\n",
     "\n",
-    "Simultaneously, we'll dispatch the benchmarkinging job and display the inference time once it's been measured."
+    "Simultaneously, we optionally dispatch the benchmarking job and display the inference time once it's been measured."
    ]
   },
   {
@@ -127,67 +127,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# devcloud API command\n",
-    "generate_command = {\n",
-    "    \"command\": \"generate\",\n",
-    "    \"arguments\": {\n",
-    "        \"options\": {\n",
-    "            \"includeLibraryForSerie\": \"H7\",\n",
-    "            \"includeLibraryForIde\": \"gcc\",\n",
-    "            \"allocateInputs\": True,\n",
-    "            \"allocateOutputs\": True,\n",
-    "            \"compression\": \"none\",\n",
-    "            \"optimization\": \"balanced\",\n",
-    "            \"classifier\": False,\n",
-    "        },\n",
-    "    },\n",
-    "    \"version\": CUBEAI_VERSION,\n",
-    "}\n",
-    "\n",
-    "print(\"Creating Cube.AI job\")\n",
-    "generate_job = (\n",
-    "    client.post(\n",
-    "        config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
-    "        files={\n",
-    "            \"model\": (\"model\", model),\n",
-    "        },\n",
-    "        data={\n",
-    "            \"templateId\": config.CUBEAI_JOB_TEMPLATE_ID,\n",
-    "            \"runtimeInput\": json.dumps({\"command\": generate_command}),\n",
-    "        },\n",
-    "    )\n",
-    "    .raise_for_status()\n",
-    "    .json()\n",
-    ")\n",
-    "print(f\"Created CubeAI job: {generate_job!r}\")\n",
-    "\n",
-    "# devcloud API command\n",
-    "benchmarking_command = {\n",
-    "    \"command\": \"benchmark\",\n",
-    "    \"arguments\": {\"options\": {}, \"parameters\": {\"board_name\": \"STM32H747I-DISCO\"}},\n",
-    "    \"version\": CUBEAI_VERSION,\n",
-    "}\n",
-    "\n",
-    "print(\"Creating benchmarking job\")\n",
-    "benchmarking_job = (\n",
-    "    client.post(\n",
-    "        config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
-    "        files={\n",
-    "            \"model\": (\"model\", model),\n",
-    "        },\n",
-    "        data={\n",
-    "            \"templateId\": config.BENCHMARKING_JOB_TEMPLATE_ID,\n",
-    "            \"runtimeInput\": json.dumps({\"command\": benchmarking_command}),\n",
-    "        },\n",
-    "    )\n",
-    "    .raise_for_status()\n",
-    "    .json()\n",
-    ")\n",
-    "print(f\"Created benchmarking job: {benchmarking_job!r}\")\n",
-    "\n",
+    "DO_BENCHMARK = False\n",
     "\n",
     "async def _generate_coro():\n",
-    "    global generate_job\n",
+    "    # devcloud API command\n",
+    "    generate_command = {\n",
+    "        \"command\": \"generate\",\n",
+    "        \"arguments\": {\n",
+    "            \"options\": {\n",
+    "                \"includeLibraryForSerie\": \"H7\",\n",
+    "                \"includeLibraryForIde\": \"gcc\",\n",
+    "                \"allocateInputs\": True,\n",
+    "                \"allocateOutputs\": True,\n",
+    "                \"compression\": \"none\",\n",
+    "                \"optimization\": \"balanced\",\n",
+    "                \"classifier\": False,\n",
+    "            },\n",
+    "        },\n",
+    "        \"version\": CUBEAI_VERSION,\n",
+    "    }\n",
+    "\n",
+    "    print(\"Creating Cube.AI job\")\n",
+    "    generate_job = (\n",
+    "        client.post(\n",
+    "            config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
+    "            files={\n",
+    "                \"model\": (\"model\", model),\n",
+    "            },\n",
+    "            data={\n",
+    "                \"templateId\": config.CUBEAI_JOB_TEMPLATE_ID,\n",
+    "                \"runtimeInput\": json.dumps({\"command\": generate_command}),\n",
+    "            },\n",
+    "        )\n",
+    "        .raise_for_status()\n",
+    "        .json()\n",
+    "    )\n",
+    "    print(f\"Created CubeAI job: {generate_job!r}\")\n",
+    "\n",
     "    global cubeai_output\n",
     "\n",
     "    job_id = generate_job[\"id\"]\n",
@@ -202,8 +178,30 @@
     "\n",
     "\n",
     "async def _benchmarking_coro():\n",
-    "    global benchmarking_job\n",
-    "    global benchmarking_output\n",
+    "    # devcloud API command\n",
+    "    benchmarking_command = {\n",
+    "        \"command\": \"benchmark\",\n",
+    "        \"arguments\": {\"options\": {}, \"parameters\": {\"board_name\": \"STM32H747I-DISCO\"}},\n",
+    "        \"version\": CUBEAI_VERSION,\n",
+    "    }\n",
+    "\n",
+    "    print(\"Creating benchmarking job\")\n",
+    "    benchmarking_job = (\n",
+    "        client.post(\n",
+    "            config.JOBCONTROL_API_JOBS_ENDPOINT,\n",
+    "            files={\n",
+    "                \"model\": (\"model\", model),\n",
+    "            },\n",
+    "            data={\n",
+    "                \"templateId\": config.BENCHMARKING_JOB_TEMPLATE_ID,\n",
+    "                \"runtimeInput\": json.dumps({\"command\": benchmarking_command}),\n",
+    "            },\n",
+    "        )\n",
+    "        .raise_for_status()\n",
+    "        .json()\n",
+    "    )\n",
+    "    print(f\"Created benchmarking job: {benchmarking_job!r}\")\n",
+    "\n",
     "\n",
     "    job_id = benchmarking_job[\"id\"]\n",
     "\n",
@@ -220,7 +218,10 @@
     "        print(f\"Benchmarking job is done. Inference time: {report['duration_ms']}ms\")\n",
     "\n",
     "\n",
-    "await asyncio.wait((asyncio.ensure_future(_generate_coro()),))\n",
+    "await asyncio.wait((\n",
+    "    asyncio.ensure_future(_generate_coro()),\n",
+    "    *((asyncio.ensure_future(_benchmarking_coro()),) if DO_BENCHMARK else ())\n",
+    "))\n",
     "\n",
     "print(\"Cube.AI and benchmarking done.\")"
    ]
